<resources>
    <string name="app_name">Activitat4_Final</string>
    <string name="todo">TODO</string>
    <string name="insertar_les_dades">Inserta les dades</string>
    <string name="button">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="test_home">Test Home</string>
    <string name="add_home">Add Home</string>
    <string name="nom_ciutat">Nom Ciutat</string>
    <string name="open_camera">Open Camera</string>
</resources>